--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -240,5 +240,12 @@ Find Nextcloud on https://nextcloud.com</string>
     <!-- Other -->
     <string name="nc_limit_hit">1000 characters limit has been hit</string>
     <string name="nc_groups">Groups</string>
+    <string name="nc_participants">Participants</string>
+
+    <string name="nc_owner">Owner</string>
+    <string name="nc_moderator">Moderator</string>
+    <string name="nc_user">User</string>
+    <string name="nc_guest">Guest</string>
+    <string name="nc_following_link">User following a public link</string>
 
 </resources>
