--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -180,6 +180,9 @@
     <string name="nc_new_messages">New messages</string>
     <string name="nc_no_messages_yet">No messages yet</string>
     <string name="nc_chat_you">You</string>
+    <string name="nc_sent_a_link">sent a link.</string>
+    <string name="nc_sent_a_gif">sent a GIF.</string>
+    <string name="nc_sent_an_attachment">sent an attachment.</string>
 
     <!-- Contacts endless loading -->
     <string name="nc_no_more_load_retry">No more items to load. Refresh to retry.</string>
