--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -180,13 +180,18 @@
     <string name="nc_new_messages">New messages</string>
     <string name="nc_no_messages_yet">No messages yet</string>
     <string name="nc_chat_you">You</string>
-    <string name="nc_sent_a_link">sent a link.</string>
-    <string name="nc_sent_a_gif">sent a GIF.</string>
-    <string name="nc_sent_an_attachment">sent an attachment.</string>
-    <string name="nc_sent_an_audio">sent an audio.</string>
-    <string name="nc_sent_a_video">sent a video.</string>
-    <string name="nc_sent_an_image">sent an image.</string>
-
+    <string name="nc_sent_a_link" formatted="true">%1$s sent a link.</string>
+    <string name="nc_sent_a_gif" formatted="true">%1$s sent a GIF.</string>
+    <string name="nc_sent_an_attachment" formatted="true">%1$s sent an attachment.</string>
+    <string name="nc_sent_an_audio" formatted="true">%1$s sent an audio.</string>
+    <string name="nc_sent_a_video" formatted="true">%1$s sent a video.</string>
+    <string name="nc_sent_an_image" formatted="true">%1$s sent an image.</string>
+    <string name="nc_sent_a_link_you">You sent a link.</string>
+    <string name="nc_sent_a_gif_you">You sent a GIF.</string>
+    <string name="nc_sent_an_attachment_you">You sent an attachment.</string>
+    <string name="nc_sent_an_audio_you">You sent an audio.</string>
+    <string name="nc_sent_a_video_you">You sent a video.</string>
+    <string name="nc_sent_an_image_you">You sent an image.</string>
 
     <!-- Contacts endless loading -->
     <string name="nc_no_more_load_retry">No more items to load. Refresh to retry.</string>
