--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,8 +83,25 @@
     <string name="nc_settings_default_ringtone" translatable="false">Librem by feandesign</string>
     <string name="nc_settings_no_ringtone">No sound</string>
     <string name="nc_settings_vibrate">Vibrate</string>
-    <string name="nc_settings_vibrate_desc">Your phone will vibrate unless it\'s silenced</string>
+    <string name="nc_settings_vibrate_desc">Phone will unless it\'s silenced</string>
     <string name="nc_settings_vibrate_key" translatable="false">notifications_vibrate</string>
+
+    <string name="nc_settings_privacy">Privacy</string>
+    <string name="nc_settings_screen_lock_title">Screen lock</string>
+    <string name="nc_settings_screen_lock_desc">Lock %1$s with Android screen lock or fingerprint</string>
+    <string name="nc_settings_screen_lock_key" translatable="false">screen_lock</string>
+    <string name="nc_settings_screen_lock_timeout_title">Screen lock inactivity timeout</string>
+    <string name="nc_none">None</string>
+    <string name="nc_settings_screen_lock_timeout_key" translatable="false">screen_lock_timeout</string>
+    <string name="nc_settings_screen_security_title">Screen security</string>
+    <string name="nc_settings_screen_security_desc">Prevents screenshots in the recents list and inside the app</string>
+    <string name="nc_settings_screen_security_key" translatable="false">screen_security</string>
+    <string name="nc_settings_incognito_keyboard_title">Screen security</string>
+    <string name="nc_settings_incognito_keyboard_desc">Instructs keyboard to disable personalized learning (without guarantees)</string>
+    <string name="nc_settings_incognito_keyboard_key" translatable="false">incognito_keyboard</string>
+    <string name="nc_settings_link_previews_title">Show link previews</string>
+    <string name="nc_settings_link_previews_desc">Allows previews of content from received links for supported services</string>
+    <string name="nc_settings_link_previews_key" translatable="false">link_previews</string>
 
 
     <string name="nc_no_proxy">No proxy</string>
