--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,7 +96,7 @@
     <string name="nc_settings_screen_security_title">Screen security</string>
     <string name="nc_settings_screen_security_desc">Prevents screenshots in the recents list and inside the app</string>
     <string name="nc_settings_screen_security_key" translatable="false">screen_security</string>
-    <string name="nc_settings_incognito_keyboard_title">Screen security</string>
+    <string name="nc_settings_incognito_keyboard_title">Incognito keyboard</string>
     <string name="nc_settings_incognito_keyboard_desc">Instructs keyboard to disable personalized learning (without guarantees)</string>
     <string name="nc_settings_incognito_keyboard_key" translatable="false">incognito_keyboard</string>
     <string name="nc_settings_link_previews_title">Show link previews</string>
