--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,6 +145,12 @@
     <string name="nc_make_call_public">Make conversation public</string>
     <string name="nc_make_call_private">Make conversation private</string>
     <string name="nc_delete_call">Delete conversation</string>
+    <string name="nc_delete">Delete</string>
+    <string name="nc_delete_conversation_default">Please confirm your intent to remove the conversation.</string>
+    <string name="nc_delete_conversation_one2one">If you delete the conversation, it will also be
+        deleted for %1$s.</string>
+    <string name="nc_delete_conversation_more">If you delete the conversation, it will also be deleted for all other participants.</string>
+
     <string name="nc_new_conversation">New conversation</string>
     <string name="nc_join_via_link">Join via link</string>
     <string name="nc_join_via_web">Join via web</string>
