--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -253,7 +253,7 @@
     <string name="nc_hello">Hello</string>
 
     <!-- Other -->
-    <string name="nc_limit_hit">1000 characters limit has been hit</string>
+    <string name="nc_limit_hit">%s characters limit has been hit</string>
     <string name="nc_groups">Groups</string>
     <string name="nc_participants">Participants</string>
 
