--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,6 +91,11 @@
     <string name="nc_settings_appearance">Appearance</string>
     <string name="nc_settings_theme_title">Theme</string>
     <string name="nc_settings_theme_key">theme</string>
+    <string name="nc_settings_theme_battery_saver_key" translatable="false">battery_saver</string>
+    <string name="nc_settings_theme_follow_system_key" translatable="false">follow_system</string>
+    <string name="nc_settings_theme_light_key" translatable="false">night_no</string>
+    <string name="nc_settings_theme_follow_system">Use system default</string>
+    <string name="nc_settings_theme_battery_saver">Set by Battery Saver</string>
     <string name="nc_settings_theme_light">Light</string>
     <string name="nc_settings_theme_dark">Dark</string>
     <string name="nc_settings_privacy">Privacy</string>
