--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -287,8 +287,8 @@
     <string name="nc_webinar">Webinar</string>
     <string name="nc_lobby">Lobby</string>
     <string name="nc_start_time">Start time</string>
-    <string name="nc_lobby_waiting">You are currently waiting in a lobby.</string>
-    <string name="nc_lobby_waiting_with_date">You are currently waiting in a lobby.\n This
+    <string name="nc_lobby_waiting">You are currently waiting in the lobby.</string>
+    <string name="nc_lobby_waiting_with_date">You are currently waiting in the lobby.\n This
         meeting is scheduled for %1$s.</string>
     <string name="nc_manual">Manual</string>
     <string name="nc_at">at</string>
