--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -124,7 +124,7 @@
 
     <string name="nc_select_an_account">Selecciona un compte</string>
 
-    <!-- Conversation menu -->
+    <!-- ConversationEntity menu -->
     <string name="nc_start_conversation">Enceta una conversa</string>
     <string name="nc_configure_room">Configura la conversa</string>
     <string name="nc_leave">Surt de la conversa</string>
