--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -124,7 +124,7 @@
 
     <string name="nc_select_an_account">Vyberte účet</string>
 
-    <!-- Conversation menu -->
+    <!-- ConversationEntity menu -->
     <string name="nc_start_conversation">Začněte konverzaci</string>
     <string name="nc_configure_room">Nastavení konverzace</string>
     <string name="nc_leave">Opustit konverzaci</string>
