--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -124,7 +124,7 @@
 
     <string name="nc_select_an_account">Vælg konto</string>
 
-    <!-- Conversation menu -->
+    <!-- ConversationEntity menu -->
     <string name="nc_start_conversation">Start en samtale</string>
     <string name="nc_configure_room">Samtaleopsætning</string>
     <string name="nc_leave">Forlad samtale</string>
