--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -93,7 +93,7 @@
     <string name="nc_license_title">Άδεια χρήσης</string>
     <string name="nc_select_an_account">Επιλογή λογαριασμού</string>
 
-    <!-- Conversation menu -->
+    <!-- ConversationEntity menu -->
     <string name="nc_start_conversation">Έναρξη συνομιλίας</string>
     <string name="nc_configure_room">Ρύθμιση συνομιλίας</string>
     <string name="nc_leave">Εγκατάλειψη συνομιλίας</string>
