--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -124,7 +124,7 @@
 
     <string name="nc_select_an_account">Selecciona una cuenta</string>
 
-    <!-- Conversation menu -->
+    <!-- ConversationEntity menu -->
     <string name="nc_start_conversation">Comienza una conversación</string>
     <string name="nc_configure_room">Configura la conversación</string>
     <string name="nc_leave">Abandonar conversación</string>
