--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -127,7 +127,7 @@ Produciuse un fallo aorecuperar os axustes da sinalización</string>
 
     <string name="nc_select_an_account">Seleccione unha conta</string>
 
-    <!-- Conversation menu -->
+    <!-- ConversationEntity menu -->
     <string name="nc_start_conversation">Iniciar unha conversa</string>
     <string name="nc_configure_room">Configurar a conversa</string>
     <string name="nc_leave">Abandonar a conversa</string>
