--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -123,7 +123,7 @@
 
     <string name="nc_select_an_account">Odaberi račun</string>
 
-    <!-- Conversation menu -->
+    <!-- ConversationEntity menu -->
     <string name="nc_start_conversation">Započni razgovor</string>
     <string name="nc_configure_room">Konfiguriraj razgovor</string>
     <string name="nc_leave">Napusti razgovor</string>
