--- a/app/src/main/res/values-hu-rHU/strings.xml
+++ b/app/src/main/res/values-hu-rHU/strings.xml
@@ -123,7 +123,7 @@
 
     <string name="nc_select_an_account">Válasszon fiókot</string>
 
-    <!-- Conversation menu -->
+    <!-- ConversationEntity menu -->
     <string name="nc_start_conversation">Beszélgetés indítása</string>
     <string name="nc_configure_room">Beszélgetés beállításai</string>
     <string name="nc_leave">Beszélgetés elhagyása</string>
