--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -103,7 +103,7 @@
 
     <string name="nc_select_an_account">בחירת חשבון</string>
 
-    <!-- Conversation menu -->
+    <!-- ConversationEntity menu -->
     <string name="nc_start_conversation">התחלת דיון</string>
     <string name="nc_configure_room">הגדרת דיון</string>
     <string name="nc_leave">יציאה מהדיון</string>
