--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -124,7 +124,7 @@
 
     <string name="nc_select_an_account">アカウントを選択</string>
 
-    <!-- Conversation menu -->
+    <!-- ConversationEntity menu -->
     <string name="nc_start_conversation">会話を開始する</string>
     <string name="nc_configure_room">会話を構成する</string>
     <string name="nc_leave">会話を離れる</string>
