--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -104,7 +104,7 @@
 
     <string name="nc_select_an_account">계정 선택</string>
 
-    <!-- Conversation menu -->
+    <!-- ConversationEntity menu -->
     <string name="nc_start_conversation">대화 시작</string>
     <string name="nc_configure_room">대화 설정</string>
     <string name="nc_leave">대화 나가기</string>
