--- a/app/src/main/res/values-nb-rNO/strings.xml
+++ b/app/src/main/res/values-nb-rNO/strings.xml
@@ -93,7 +93,7 @@
 
     <string name="nc_select_an_account">Velg en konto</string>
 
-    <!-- Conversation menu -->
+    <!-- ConversationEntity menu -->
     <string name="nc_start_conversation">Start en samtale</string>
     <string name="nc_configure_room">Konfigurer samtale</string>
     <string name="nc_leave">Forlat samtale</string>
