--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -126,7 +126,7 @@ Kies er eentje van een provider.</string>
 
     <string name="nc_select_an_account">Selecteer een account</string>
 
-    <!-- Conversation menu -->
+    <!-- ConversationEntity menu -->
     <string name="nc_start_conversation">Begin een gesprek</string>
     <string name="nc_configure_room">Configureren gesprek</string>
     <string name="nc_leave">Verlaat gesprek</string>
