--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -125,7 +125,7 @@
 
     <string name="nc_select_an_account">Wybierz konto</string>
 
-    <!-- Conversation menu -->
+    <!-- ConversationEntity menu -->
     <string name="nc_start_conversation">Rozpocznij rozmowę</string>
     <string name="nc_configure_room">Konfiguruj rozmowę</string>
     <string name="nc_leave">Opuść rozmowę</string>
