--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -95,7 +95,7 @@
 
     <string name="nc_select_an_account">Selecionar uma conta</string>
 
-    <!-- Conversation menu -->
+    <!-- ConversationEntity menu -->
     <string name="nc_start_conversation">Iniciar uma conversação</string>
     <string name="nc_configure_room">Configurar conversação</string>
     <string name="nc_leave">Sair da conversação</string>
