--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -115,7 +115,7 @@
 
     <string name="nc_select_an_account">Izbor računa</string>
 
-    <!-- Conversation menu -->
+    <!-- ConversationEntity menu -->
     <string name="nc_start_conversation">Začni s pogovorom</string>
     <string name="nc_configure_room">Nastavitev pogovora</string>
     <string name="nc_leave">Zapusti pogovor</string>
