--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -124,7 +124,7 @@
 
     <string name="nc_select_an_account">Изаберите налог</string>
 
-    <!-- Conversation menu -->
+    <!-- ConversationEntity menu -->
     <string name="nc_start_conversation">Започни разговор</string>
     <string name="nc_configure_room">Подеси разговор</string>
     <string name="nc_leave">Напусти разговор</string>
