--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -125,7 +125,7 @@
 
     <string name="nc_select_an_account">Välj ett konto</string>
 
-    <!-- Conversation menu -->
+    <!-- ConversationEntity menu -->
     <string name="nc_start_conversation">Starta en konversation</string>
     <string name="nc_configure_room">Anpassa konversation</string>
     <string name="nc_leave">Lämna konversationen</string>
