--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -124,7 +124,7 @@
 
     <string name="nc_select_an_account">选择一个账户</string>
 
-    <!-- Conversation menu -->
+    <!-- ConversationEntity menu -->
     <string name="nc_start_conversation">发起会话</string>
     <string name="nc_configure_room">配置会话</string>
     <string name="nc_leave">离开会话</string>
