--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -99,7 +99,7 @@
 
     <string name="nc_select_an_account">選擇一個帳號</string>
 
-    <!-- Conversation menu -->
+    <!-- ConversationEntity menu -->
     <string name="nc_start_conversation">新對話</string>
     <string name="nc_configure_room">設定對話</string>
     <string name="nc_leave">結束對話</string>
