--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -317,5 +317,7 @@
 
     <string name="nc_general_settings">General</string>
     <string name="nc_allow_guests">Allow guests</string>
+    <string name="nc_last_moderator_title">Could not leave conversation</string>
+    <string name="nc_last_moderator">You need to promote a new moderator before you can leave %1$s.</string>
 
 </resources>
