--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -320,4 +320,8 @@
     <string name="nc_last_moderator_title">Could not leave conversation</string>
     <string name="nc_last_moderator">You need to promote a new moderator before you can leave %1$s.</string>
 
+    <!-- Non-translatable strings -->
+
+    <string name="path_password_strike_through" translatable="false"
+        tools:override="true">M3.27,4.27L19.74,20.74</string>
 </resources>
