--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -320,6 +320,9 @@
     <string name="nc_last_moderator_title">Could not leave conversation</string>
     <string name="nc_last_moderator">You need to promote a new moderator before you can leave %1$s.</string>
 
+    <!-- Chat -->
+    <string name="nc_99_plus">99+</string>
+
     <!-- Non-translatable strings -->
 
     <string name="path_password_strike_through" translatable="false"
