Squashed commit of the following + refactoring/improvements
commit 96caa85f50c192174b63079d5dec86c0463d61a0
Author: Thomas Ebert <thomas.ebert@te-online.net>
Date:   Wed Dec 18 22:37:13 2019 +0100

    Clean up / WIP – Add intent for opening specific conversation.

commit 8cc03814fdc19e6230c15fb528f3f7e86394685e
Author: Nextcloud bot <bot@nextcloud.com>
Date:   Mon Dec 16 03:59:18 2019 +0000

    [tx-robot] updated from transifex

commit 8db14fae8850da65a7c80e3b469ae0dec01bd567
Author: Nextcloud bot <bot@nextcloud.com>
Date:   Sun Dec 15 03:59:16 2019 +0000

    [tx-robot] updated from transifex

commit 34909d469f1cd6161aff6af1c7a0fc81414ee263
Author: Nextcloud bot <bot@nextcloud.com>
Date:   Thu Dec 12 03:59:17 2019 +0000

    [tx-robot] updated from transifex

commit 6ea1f13b520b230df76b53520c36d1041f1fa62d
Author: Nextcloud bot <bot@nextcloud.com>
Date:   Wed Dec 11 03:17:05 2019 +0000

    [tx-robot] updated from transifex

commit addd5721784f73ebc18434646bbb348426bc8268
Author: Nextcloud bot <bot@nextcloud.com>
Date:   Tue Dec 10 03:21:10 2019 +0000

    [tx-robot] updated from transifex

commit 9abf63c0ca61808f13f05e9c11650c03d2315321
Author: Nextcloud bot <bot@nextcloud.com>
Date:   Sun Dec 8 03:18:59 2019 +0000

    [tx-robot] updated from transifex

commit a80da49ea994feabe524eb66d506814963820976
Author: Nextcloud bot <bot@nextcloud.com>
Date:   Sat Dec 7 03:19:17 2019 +0000

    [tx-robot] updated from transifex

commit cd4d5ae79e28071bcf066ccbf4ae64e575dc322c
Author: Nextcloud bot <bot@nextcloud.com>
Date:   Fri Dec 6 03:19:17 2019 +0000

    [tx-robot] updated from transifex

commit 610d05b42dd998df5aafc1330b04adcfd3788792
Author: Nextcloud bot <bot@nextcloud.com>
Date:   Sat Nov 30 03:15:59 2019 +0000

    [tx-robot] updated from transifex

commit 46ac1d7b90aea9220bc8226ff90603b29e41f9b4
Author: Nextcloud bot <bot@nextcloud.com>
Date:   Fri Nov 29 03:15:32 2019 +0000

    [tx-robot] updated from transifex

commit 4b45db6a38416b0d1df53cdb254cb38932a678cb

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -167,6 +167,7 @@
     <string name="nc_delete_conversation_more">If you delete this conversation it will also be
         deleted for all other participants.</string>
 
+    <string name="nc_new_conversation_short">New</string>
     <string name="nc_new_conversation">New conversation</string>
     <string name="nc_join_via_link">Join with a link</string>
     <string name="nc_join_via_web">Join via web</string>
