--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -285,6 +285,9 @@
     <!-- Other -->
     <string name="nc_limit_hit">%s characters limit has been hit</string>
     <string name="nc_groups">Groups</string>
+    <string name="nc_contacts">Contacts</string>
+    <string name="nc_circles">Circles</string>
+    <string name="nc_emails">Emails</string>
     <string name="nc_participants">Participants</string>
 
     <string name="nc_owner">Owner</string>
