Lots of cleanups & work on contacts
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -180,7 +180,7 @@
         conversations list</string>
 
     <!-- Contacts -->
-    <string name="nc_select_contacts">Select contacts</string>
+    <string name="nc_select_contacts">Find participants</string>
     <string name="nc_contacts_done">Done</string>
 
     <!-- Permissions -->
@@ -289,6 +289,7 @@
     <string name="nc_circles">Circles</string>
     <string name="nc_emails">Emails</string>
     <string name="nc_participants">Participants</string>
+    <string name="nc_others">Others</string>
 
     <string name="nc_owner">Owner</string>
     <string name="nc_moderator">Moderator</string>
