New chat - baby steps
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -320,5 +320,5 @@
     <string name="nc_search_for_more">Cerca altri partecipanti</string>
     <string name="nc_new_group">Nuovo gruppo</string>
     <string name="nc_search_empty_contacts">Dove si sono nascosti?</string>
-    <string name="reject_call">Rifiuta</string>
+    <string name="nc_reject_call">Rifiuta</string>
 </resources>
