--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -313,5 +313,5 @@
     <string name="nc_search_for_more">Vyhledat další účastníky</string>
     <string name="nc_new_group">Nová skupina</string>
     <string name="nc_search_empty_contacts">Kam se všichni schovali?</string>
-    <string name="reject_call">Odmítnout</string>
+    <string name="nc_reject_call">Odmítnout</string>
 </resources>
