--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -321,5 +321,5 @@
     <string name="nc_search_for_more">Bilatu parte-hartzaile gehiago</string>
     <string name="nc_new_group">Talde berria</string>
     <string name="nc_search_empty_contacts">Non ezkutatu dira denak?</string>
-    <string name="reject_call">Baztertu</string>
+    <string name="nc_reject_call">Baztertu</string>
 </resources>
