--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -320,5 +320,5 @@
     <string name="nc_search_for_more">Wyszukaj więcej uczestników</string>
     <string name="nc_new_group">Nowa grupa</string>
     <string name="nc_search_empty_contacts">Gdzie oni wszyscy się schowali?</string>
-    <string name="reject_call">Odrzuć </string>
+    <string name="nc_reject_call">Odrzuć </string>
 </resources>
