--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -320,5 +320,5 @@
     <string name="nc_search_for_more">Procurar por mais participantes</string>
     <string name="nc_new_group">Novo grupo</string>
     <string name="nc_search_empty_contacts">Onde eles todos se esconderam?</string>
-    <string name="reject_call">Rejeitar</string>
+    <string name="nc_reject_call">Rejeitar</string>
 </resources>
