--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -315,5 +315,5 @@
     <string name="nc_search_for_more">Искать дополнительных участников</string>
     <string name="nc_new_group">Новая группа</string>
     <string name="nc_search_empty_contacts">Где все?</string>
-    <string name="reject_call">Отклонить</string>
+    <string name="nc_reject_call">Отклонить</string>
 </resources>
