--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -319,5 +319,5 @@
     <string name="nc_search_for_more">Тражи још учесника</string>
     <string name="nc_new_group">Нова група</string>
     <string name="nc_search_empty_contacts">Где су сви нестали?</string>
-    <string name="reject_call">Одбиј</string>
+    <string name="nc_reject_call">Одбиј</string>
 </resources>
