--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -316,5 +316,5 @@
     <string name="nc_search_for_more">搜索更多参与者</string>
     <string name="nc_new_group">新建群组</string>
     <string name="nc_search_empty_contacts">他们都藏在哪里？</string>
-    <string name="reject_call">拒绝</string>
+    <string name="nc_reject_call">拒绝</string>
 </resources>
