--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,7 @@
     <string name="nc_settings_remove_confirmation">Please confirm your intent to remove the current account.</string>
     <string name="nc_settings_remove_account">Remove account</string>
     <string name="nc_settings_add_account">Add a new account</string>
+    <string name="nc_settings_new_account">New account</string>
     <string name="nc_add">Add</string>
     <string name="nc_settings_wrong_account">Only current account can be reauthorized</string>
     <string name="nc_settings_no_talk_installed">Talk app is not installed on the server you tried to authenticate against</string>
@@ -347,4 +348,8 @@
     <string name="nc_reject_call">Reject</string>
     <string name="silenced_by_moderator">You were silenced by a moderator</string>
     <string name="nc_failed_to_send">Failed to send - tap to retry sending.</string>
+    <string name="nc_preferences">Preferences</string>
+    <string name="nc_look_and_feel">Look&amp;Feel</string>
+    <string name="nc_settings_calls_sound">Calls sound</string>
+    <string name="nc_settings_notifications_sound">Notifications sound</string>
 </resources>
